<resources>
    <string name="app_name">OnlyTube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youtubeview">YouTubeView</string>
    <string name="allow_app_to_other_app">Allow App to Other App</string>
    <string name="get_permission">Get Permission</string>
    <string name="svg_pause">M6,19h4V5H6v14zm8,-14v14h4V5h-4z</string>
    <string name="svg_play">M8,5v14l11,-7z</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="FileName">SHAREDPREFERENCE_KEYFILE</string>
    <string name="videoQuality">VIDEO_QUALITY</string>
    <string name="init">INITIALIZED</string>
    <string name="finishOnEnd">FINISH_ON_END</string>
    <string name="count">COUNT</string>
    <string name="repeat_type">REPEAT_TYPE</string>
    <string name="no_of_repeats">No. Of Repeats</string>
    <string name="player_type">PLAYER_TYPE</string>
    <string name="facebookview">FacebookView</string>
    <string name="downstring">Download?</string>
    <string name="subtitle_title">Download and play Video hello</string>
    <string name="play">Play</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>

</resources>